# aurasense-backend

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: BACKEND_IMPLEMENTATION_ALTERNATIVE.md  ONBOARDING_GUIDE.md
scripts/: cli_test_onboarding.py  deploy-systemd.sh  deploy.sh  production.env.template  server-setup.sh  setup-env.sh
src/agents/: __init__.py
src/agents/auth_agent/: __init__.py  graph.py  llm.py  nodes.py  state.py  tools.py
src/agents/base/: __init__.py  agent.py  checkpointer.py  collaboration.py  state.py
src/agents/food_agent/: __init__.py  agent.py  allergy_filter.py  graph.py  llm.py  nodes.py  schemas.py  state.py  tools.py
src/agents/onboarding_agent/: __init__.py  agent.py  graph.py  llm.py  nodes.py  state.py  tools.py
src/agents/onboaring_agent/: cli_test.py  graph.py  llm.py  nodes.py  state.py  tools.py
src/agents/profile_agent/: __init__.py  agent.py  graph.py  llm.py  nodes.py  snapshot.py  state.py  tools.py
src/agents/social_agent/: __init__.py  graph.py  llm.py  nodes.py  tools.py
src/agents/supervisor/: __init__.py  graph.py  intents.py  nodes.py  state.py
src/agents/travel_agent/: __init__.py  graph.py  llm.py  nodes.py  tools.py
src/app/: __init__.py  main.py
src/app/core/: __init__.py  config.py  database.py  logging.py  security.py
src/app/models/: hotel.py  location.py  menuitem.py  order.py  relationships.py  restaurant.py  session.py  user.py
src/app/schemas/: __init__.py  requests.py  responses.py
src/app/services/: __init__.py  agent_orchestrator.py  (+11 more)
src/docs/: BACKEND_IMPLEMENTATION.md
tests/: conftest.py  test_allergy_filter.py  test_base_agent.py  test_food_agent_nodes.py  test_graphiti_contract.py  test_graphiti_entity_types.py  test_graphiti_retriever.py  test_imports.py  test_llm_gateway.py  test_logging.py  test_mcp_foursquare.py  test_mcp_service.py  test_profile_service.py  test_rate_limit.py  test_supervisor_nodes.py  test_user_context_snapshot.py  test_users_route.py
(+28 files in other folders)
