[project]
name = "aurasense-backend"
version = "0.1.0"
description = "Voice-first, agent-powered lifestyle companion backend (FastAPI + LangGraph + Graphiti)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.9.3",
    "argon2-cffi>=25.1.0",
    "argon2-cffi-bindings>=21.2.0",
    "cffi>=1.17.1",
    "fastapi>=0.115.14",
    "graphiti>=0.1.13",
    "groq>=0.29.0",
    "langchain>=0.3.26",
    "langchain-core>=0.3.68",
    "langchain-experimental>=0.3.4",
    "langchain-groq>=0.3.5",
    "langgraph>=0.5.1",
    "neo4j>=5.28.1",
    "neomodel>=5.5.0",
    "pycparser>=2.22",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.5.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "rich>=14.0.0",
    "scalar-fastapi>=1.0.3",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
